--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="https://github.com/3C-joaopa-in?tab=repositories">Projetos <span aria-hidden="true">↗</span></a></li>
                 <li><a href="https://www.instagram.com/juao.bobao">Redes <span aria-hidden="true">↗</span></a></li>
                 <li><a href="#sobre">Sobre <span aria-hidden="true">↗</span></a></li>
-                <li><a href="#">Contato <span aria-hidden="true">↗</span></a></li>
+                <li><a href="#contato">Contato <span aria-hidden="true">↗</span></a></li>
             </ul>
         </section>
 
