--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap" rel="stylesheet">
     <title>Portifólio</title>
+    <link rel="icon" type="image/png" href="iconesite.png">
 </head>
 <body>
     <div class="container">
@@ -15,9 +20,9 @@
             <nav>
                 <ul>
                     <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="#dasredes">Redes Sociais</a></li>
+                    <li><a href="#dasredes">Redes</a></li>
                     <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#contato">Onde me encontrar</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +44,7 @@
                 <li><a href="https://github.com/3C-joaopa-in?tab=repositories">Projetos <span aria-hidden="true">↗</span></a></li>
                 <li><a href="https://www.instagram.com/juao.bobao">Redes <span aria-hidden="true">↗</span></a></li>
                 <li><a href="#sobre">Sobre <span aria-hidden="true">↗</span></a></li>
-                <li><a href="#contato">Contato <span aria-hidden="true">↗</span></a></li>
+                <li><a href="#">Contato <span aria-hidden="true">↗</span></a></li>
             </ul>
         </section>
 
